# kalshi-headless

./: .gitignore  CLAUDE.md  DATA-MAP.md  GOAL.md  LOOP-QUEUE.md  PROVENANCE.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
collection/: __init__.py  burst_capture.py  capture_orderbooks.py  crypto_hourly.py  econ_prints.py  forecast_collector.py  hf_burst.py  hourly_pass.py  hyperliquid_funding.py  normalize.py  odds_api.py  orderbook_depth.py  perp_tape.py  polymarket_pairs.py  polymarket_us_live.py  polymarket_us_pairs.py  settlement_ledger.py  sports_history.py  sports_pairs.py  universe_sweep.py  weather_actuals.py  weather_books.py  ws_depth.py
config/: cities.yaml  implication_pairs.yaml  notify.topic  station_candidates.yaml  venues.yaml  windows.yaml  ws_depth_tickers.txt
core/: __init__.py  bootstrap.py  canonical.py  crypto_schema.py  depth.py  income_legs.py  io.py  kalshi_fields.py  manifest_schema.py  odds.py  oddsmath.py  pricing.py  reversal.py  schema.py  source_tag.py  sports_schema.py  stats.py  timeutil.py
execution/: __init__.py  fill_models.py  limits.py  paper_broker.py  schema.py  strategy_api.py
findings/: 2026-06-18-codebase-money-map.md  2026-06-18-fomc-zq-s2.md  2026-06-18-longshot-fade-s1.md  2026-06-18-weather-rehab-s5.md  2026-07-03-crypto-basis-s8-q5.md  2026-07-03-sports-history-s7a.md  2026-07-03-sports-history-s7b.md  2026-07-04-crypto-basis-s8-verdict.md  2026-07-04-edge-candidates-s12-s18.md  2026-07-04-sports-clv-s7-verdict.md  2026-07-04-sports-maker-s13-verdict.md  2026-07-05-polymarket-leadlag-s9-first-cut.md  2026-07-06-cpi-inflation-macro-pairs-q12-followup.md  2026-07-06-fed-decision-macro-pairs-q12-first-cut.md  2026-07-06-polymarket-leadlag-s9-resolution.md  2026-07-06-polymarket-leadlag-s9-shock-eventstudy.md  2026-07-06-s16-s18-feasibility-blocked.md  2026-07-06-tape-audit.md  2026-07-10-sports-clv-s7b.md  2026-07-10-sports-history-s7a.md  2026-07-11-mm-spread-s6-firstcut.md  (+62 more)
(+5150 files in other folders)
