[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-headless"
version = "0.0.0"
description = "Canonical Tier-2 Kalshi project: prove a profitable strategy set at REAL fillable asks. S0 real-ask substrate + Hard-Rule invariants."
requires-python = ">=3.9"
# Kept small so the core substrate + invariant tests run in a minimal env.
dependencies = [
  "requests>=2.31",
  "pyyaml>=6.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "cryptography>=42.0",     # RSA-PSS/Ed25519 handshake signing (ws_depth, polymarket_us_live)
  "websocket-client>=1.7",  # ws_depth.py's live connection factory
]
analysis = [
  "numpy>=1.24",     # bootstrap CI / longshot-fade probe (Phase 1)
  "openpyxl>=3.1",   # read football-data.co.uk's free historical-odds .xlsx (S7a)
]

[tool.setuptools]
packages = ["core", "collection", "validation", "analysis", "analysis.observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
